# GevaarlijkeStoffenDB

./: .gitignore  Agent.py  AgentManager.py  DocumentIngestAgent.py  PostgresDBConnector.py  README.md  State.py  Tools.py  app.py  docker-compose.yml  main.py  pyproject.toml
.run/: Npm Run Dev.run.xml  Run Uvicorn.run.xml
frontend/: index.html  package.json
frontend/src/: App.jsx  config.js  index.css
frontend/src/components/: PdfUploadTab.jsx  QueryTab.jsx  UnifiedInterface.css  UnifiedInterface.jsx
frontend/src/hooks/: useLoadingDots.jsx
frontend/src/services/: api.js
postgres/: schema.sql
