[project]
name = "gevaarlijkestoffendb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fitz>=0.0.1.dev2",
    "langchain>=1.0.3",
    "langchain-openai>=1.0.1",
    "langgraph>=1.0.2",
    "openai>=2.6.1",
    "psycopg2>=2.9.11",
    "pymupdf>=1.26.5",
    "python-dotenv>=1.2.1",
    "tiktoken>=0.12.0",
]
